Add Guild channel and group ID to DB
