# bot/rest/dist/static/openapi-spec.yaml
@@ -163,6 +163,21 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/GuildChannelStats"
+  /guild/_audit:
+    post:
+      summary: Start guild audit
+      operationId: guildStartAudit
+      tags:
+        - guilds
+      responses:
+        default:
+          $ref: '#/components/responses/genericErrorResponse'
+        200:
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                type: string
   /resetroster:
     post:
       summary: Update Roster Information
